# authcord-cpp

./: CMakeLists.txt  README.md
examples/: basic.cpp
include/: authcord.hpp
